--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,15 +1,29 @@
-default: &default
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
   adapter: mysql2
-  encoding: utf8
+  encoding: utf8mb4
+  database: blog_development
   pool: 5
-  username:
-  password
+  username: root
+  password: Sharina99.
+  socket: /var/run/mysqld/mysqld.sock
+
+production:
+  adapter: mysql2
+  encoding: utf8mb4
+  database: blog_development
+  pool: 5
+  username: root
+  password: Sharina99.
   socket: /var/run/mysqld/mysqld.sock
 
 development:
-  <<: *default
-  database: sample_development
-
-test:
-  <<: *default
-  database: sample_test
+  adapter: mysql2
+  encoding: utf8mb4
+  database: blog_development
+  pool: 5
+  username: root
+  password: Sharina99.
+  socket: /var/run/mysqld/mysqld.sock
